Remove sonar issues